--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node %NODE_DEBUG_OPTION% -r babel-register main.js tests/examples/site.com/acme.json"
+    "dev": "node %NODE_DEBUG_OPTION% -r babel-register main.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "mkdirp": "^0.5.1",
-    "yargs": "^12.0.1"
+    "yargs": "^12.0.1",
+    "minimatch": "^3.0.4"
   },
   "devDependencies": {
-    "@types/yargs": "^11.1.0",
+    "@types/minimatch": "^3.0.3",
+    "@types/yargs": "^11.1.1",
     "babel-cli": "^6.26.0",
     "babel-plugin-shebang": "0.0.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
