--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node -r babel-register main.js",
     "dev": "node %NODE_DEBUG_OPTION% -r babel-register main.js -o ./tests/certs",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,,./npm-debug.log,./tests,./certs --copy-files"
   },
