--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-runtime": "^6.26.0",
+    "minimatch": "^3.0.4",
     "mkdirp": "^0.5.1",
-    "yargs": "^12.0.1",
-    "minimatch": "^3.0.4"
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "@types/minimatch": "^3.0.3",
